2009-05-01  Matthias Klose  <doko@ubuntu.com>

	* patches/cacao/launcher.patch: Create new thread depending on the
	current VM.
	* Makefile.am (ICEDTEA_PATCHES): Apply unconditionally.
	(icedtea-against-icedtea): Add dependencies on stamps/add-cacao.stamp,
	stamps/add-zero.stamp.
	(icedtea-debug-against-icedtea): Add dependencies on
	stamps/add-cacao-debug.stamp, stamps/add-zero-debug.stamp.
	(stamps/add-{cacao,zero}{,-debug}.stamp: New.
	(clean, stamps/download.stamp, clean-download, stamps/extract.stamp
	stamps/cacao.stamp): Use BUILD_CACAO instead of WITH_CACAO.
	(stamps/icedtea.stamp, stamps/icedtea-debug.stamp): Add VM aliases
	for cacao and zero when configured as ZERO_BUILD or WITH_CACAO.
	* configure.ac: New option --with-additional-vms=, new conditionals
	ADD_CACAO_BUILD, ADD_ZERO_BUILD, ADD_SHARK_BUILD, BUILD_CACAO.

2009-05-04  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (icedtea.stamp): Strip client probes from hotspot.stp
	when client not available (ENABLE_SYSTEMTAP only).
	(icedtea-debug.stamp): Likewise.

2009-04-29  Mark Wielaard  <mjw@redhat.com>

	* README: Document systemtap support.
	* INSTALL: Document build requirements for systemtap support.
	* NEWS: Mention systemtap support.

2009-04-29 Andrew John Hughes <ahughes@redhat.com>

	* Makefile.am:
	Use abs_top_builddir to locate generated
	Systemtap file.

2009-04-28  Mark Wielaard  <mjw@redhat.com>

	* tapset/hotspot.stp.in: New systemtap tapset for hotspot.
	* configure.ac: Add check for abs-install-dir when
	--enable-systemtap is given.
	* Makefile.am (icedtea.stamp): Install tapsets.
	(icedtea-debug.stamp): Likewise.
	* .hgignore: Add tapset/hotspot.stp.

2009-03-27  Mark Wielaard  <mjw@redhat.com>

	* patches/icedtea-systemtap.patch: New patch.
	* configure.ac: Add AC_ARG_ENABLE systemtap and AC_CHECK_HEADER
	for sys/sdt.h when --enable-systemtap given.
	* Makefile.am: Add patches/icedtea-systemtap.patch to
	ICEDTEA_PATCHES if ENABLE_SYSTEMTAP.
